--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,7 +38,7 @@
                   <div class="list-group" id="list-tab" role="tablist">
                       <a class="list-group-item list-group-item-action " id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages" routerLink='/sport'><i class="fa fa-slideshare"></i><br>dashboard</a>
                       <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages" routerLink='/business'><i class="fa fa-dashcube"></i><br>Atm list</a>
-                      <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages" routerLink='/home'><i class="fa fa-list-ul "></i><br>tasks List</a>
+                      <a class="list-group-item list-group-item-action active" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages" routerLink='/home'><i class="fa fa-list-ul "></i><br>tasks List</a>
                       <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages" routerLink='/tech'><i class="fa fa-laptop "></i><br>Explore</a>
                       <a class="list-group-item list-group-item-action"  id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages" routerLink='/gallary'><i class="fa fa-user "></i><br>Users</a>
                     
@@ -50,6 +50,11 @@
      </div>        
       </div>
 
+      <div class="col-md-10">
+        <router-outlet></router-outlet>
+
+      </div>
+
 
       </div>
 
@@ -58,7 +63,6 @@
 
 
   
-        <router-outlet></router-outlet>
 
 
 
