--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,38 +1,5 @@
 
-      <section class="container-fluid">
-          
-        <div class="row">
-
-          
-          <!--  left panel / side menu  -->
-          <div class="left-panel col-md-2">
-              
-              
-              
-              
-            
-            <div class="sidebar text-center" >
-         
-              <div class="side-title">
-                   <a href=""><i class="fa fa-share-square fa-lg" style="color: green"></i> &nbsp;CMS</a>
-                  
-                  </div>
-     
-               <div class="sidebar-inner">
-                   <div class="">
-                    <div class="list-group" id="list-tab" role="tablist">
-                            <a class="list-group-item list-group-item-action " id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages" routerLink='/sport'><i class="fa fa-slideshare"></i><br>dashboard</a>
-                            <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages" routerLink='/business'><i class="fa fa-dashcube"></i><br>Atm list</a>
-                            <a class="list-group-item list-group-item-action active" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages" routerLink='/home'><i class="fa fa-list-ul "></i><br>tasks List</a>
-                            <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages" routerLink='/tech'><i class="fa fa-laptop "></i><br>Explore</a>
-                            <a class="list-group-item list-group-item-action"  id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages" routerLink='/gallary'><i class="fa fa-user "></i><br>Users</a>
-                      
-                    </div>
-         
-                          
-                   </div>
-               </div>
-          </div> 
+      
               
               
             
@@ -41,10 +8,9 @@
             
             
             
-            </div>
           
           <!-- right panel / content page    -->
-        <div class="right-panel col-md-10">
+        <div class="right-panel ">
           
           <nav class="nav-bar">
               <div class="row">
@@ -342,6 +308,3 @@
           
           </div>
         
-        </div>
-        </section>
-       
